<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.SettingActivity">

    <TextView
        android:id="@+id/reminder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="75dp"
        android:text="@string/reminder"
        android:textColor="@color/pink"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/reminder"
        app:layout_constraintStart_toStartOf="@id/reminder"
        android:layout_marginTop="20dp"
        android:text="@string/notification"
        android:textColor="@color/black"/>

    <TextView
        android:id="@+id/sub_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/notification"
        app:layout_constraintStart_toStartOf="@id/notification"
        android:text="@string/sub_notification"
        android:textSize="12sp"/>

    <Switch
        android:id="@+id/switch_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="@id/sub_notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/notification"
        tools:ignore="UseSwitchCompatOrMaterialXml" />



</androidx.constraintlayout.widget.ConstraintLayout>